# imiev-bmu-mitm

./: .gitignore  .gitignore_cmake  .mxproject  CMAKE_BUILD.md  CMakeLists.txt  Makefile  README.md  STM32F105XC_FLASH.ld  build.sh  startup_stm32f105xc.s  test.sh
Inc/: App.h  BatteryModel.h  CanMessage373.h  CanMessage374.h  CanMessage374Override.h  CanQueue.h  Diagnostic.h  TemperatureValue.h  VoltageByte.h  can.h  can_types.h  gpio.h  iwdg.h  main.h  utility.h
Src/: App.cpp  BatteryModel.cpp  CanMessage373.cpp  CanMessage373.h  CanMessage374.cpp  CanMessage374.h  CanMessage374Override.cpp  Diagnostic.cpp  README.md  VoltageByte.cpp  VoltageByte.h  can-bridge-firmware.cpp  can.c  can_callbacks.cpp  main.cpp  main.cpp.original  stdlib.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  utility.c  version.h
documentation/: README.md  generate_plot.sh  generate_soc2_transfer_function.cpp  plot_soc2_transfer_function.gnuplot
test/: CMakeLists.txt  README.md  test_app.cpp  test_battery_model.cpp  test_can_message_373.cpp  test_can_message_374.cpp  test_can_message_374_override.cpp  test_can_queue.cpp  test_conversion.cpp  test_diagnostic.cpp  test_main.cpp  test_utility.cpp  test_voltage_byte.cpp
